[package]
name = "yt_chat"
version = "0.1.0"
edition = "2021"
authors = ["dxkyy"]

[dependencies]
reqwest = {version = "0.12.9", features = ["json"]}
tokio = {version = "1", features = ["full"]}
serde_json = "1.0"
dotenv = "0.15"
ytranscript = "0.1.0"
ollama-rs = {version = "0.1", features = ["stream"]}
futures = "0.3"
